# TensorRT-LLM

./: requirements.txt
cpp/tensorrt_llm/kernels/: gptKernels.cu  gptKernels.h
cpp/tensorrt_llm/kernels/contextFusedMultiHeadAttention/: fmhaRunner.cpp  fused_multihead_attention_common.h  fused_multihead_attention_v2.h
cpp/tensorrt_llm/kernels/contextFusedMultiHeadAttention/cubin/: fmha_cubin.h  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_qk_tanh_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_qk_tanh_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_qk_tanh_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_qk_tanh_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_256_qk_tanh_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_256_qk_tanh_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_256_qk_tanh_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_qk_tanh_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_qk_tanh_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_qk_tanh_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_qk_tanh_sm90.cubin.cpp  (+92 more)
cpp/tensorrt_llm/plugins/api/: tllmPlugin.cpp
cpp/tensorrt_llm/plugins/bertAttentionPlugin/: bertAttentionPlugin.cpp  bertAttentionPlugin.h
cpp/tensorrt_llm/plugins/common/: plugin.h
cpp/tensorrt_llm/runtime/: tllmRuntime.cpp  tllmRuntime.h
examples/cpp/: CMakeLists.txt  alimama_readme.txt  main_multi-stream.cpp
examples/flux/: README.md  convert_checkpoint.py  run.py
examples/pytorch/: quickstart_advanced.py
examples/video_aries/: Trtllm_flux_model.py  convert_checkpoint.py  convert_checkpoint_deepcache.py  readme  test_infer.py  torch_trtllm_check.py
examples/video_aries/shell/: opensource_convert.sh  opensource_fmha_fp8_tp_distill_convert.sh
scripts/: build_wheel.py
tensorrt_llm/: _ipc_utils.py  builder.py  functional.py  mapping.py  profiler.py
tensorrt_llm/_torch/pyexecutor/: cuda_graph_runner.py  model_engine.py  py_executor.py
tensorrt_llm/bench/benchmark/: throughput.py
tensorrt_llm/bench/dataclasses/: configuration.py
tensorrt_llm/commands/: bench.py  build.py
tensorrt_llm/layers/: __init__.py  activation.py  attention.py  conv.py  embedding.py  normalization.py
tensorrt_llm/models/: __init__.py  convert_utils.py  modeling_utils.py
tensorrt_llm/models/flux/: config.py  model.py
tensorrt_llm/models/video_aries/: aries_layers.py  config.py  convert_checkpoint.py  model.py
tensorrt_llm/runtime/: session.py
tests/attention/: test_bert_attention_1.py
